backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chaewonzz
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
