backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: chaewonzz
spec:
  rules:
    - host: chaewonzz.10.241.163.146.nip.io  # 맞춤형 nip.io 도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
